@@ -14,6 +14,8 @@ server:
 	#allow: 192.168
 	# auth password must be longer than 31 characters
 	#auth: very-strong-passwordwwwwwwwwwwwwww
+	auth: a-123456789012345678901234567890
+	auth: b-123456789012345678901234567890
 	readonly: no
 
 logger:
